--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homepage</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/navbar-style.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,400,0,0" />
+    <link rel="icon" href="images/cart_logo.png"/>
   
   </head>
   <body>
@@ -13,7 +15,7 @@
       <%- include('./includes/navbar.ejs') %>
     </header>
 
-    <img src="images/under_construction.png" class="construction-image" alt="construction Image">
+    <%- include('./includes/construction-body.ejs') %>
 
   </body>
 </html>
