--- a/public/css/navbar-style.css
+++ b/public/css/navbar-style.css
@@ -1,15 +1,15 @@
 /* Add a black background color to the top navigation */
 @import url("https://fonts.cdnfonts.com/css/google-sans");
 
-body {
-  margin: 0px;
-  padding: 0px;
-}
-
 .topnav {
-  display: block;
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
+  display: flex;
   background-color: #333;
-  overflow: hidden;
+  height: fit-content;
+  z-index: 1;
+  /* overflow: hidden; */
 }
 
 /* Style the links inside the navigation bar */
@@ -24,7 +24,6 @@ body {
 }
 
 .logo {
-  position: absolute;
   margin: auto;
   left: 50%;
   right: auto;
@@ -32,7 +31,6 @@ body {
   width: auto;
   height: 40px;
 }
-
 
 .nav-icons a {
   float: left;
