--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -8,14 +8,60 @@
     <link rel="stylesheet" href="css/navbar-style.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,400,0,0" />
     <link rel="icon" href="images/cart_logo.png"/>
+    <link rel="stylesheet" href="/css/product.css">
+    <link rel="stylesheet" href="/css/main.css">
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,400,0,0" />
+  <link rel="stylesheet" href="css/navbar-style.css" />
+  <link rel="stylesheet" href="css/login-style.css">
+  <link rel="icon" href="images/cart_logo.png"/>
   
   </head>
   <body>
-    <header>
-      <%- include('./includes/navbar.ejs') %>
-    </header>
 
-    <%- include('./includes/construction-body.ejs') %>
+      <%- include('./includes/navbar.ejs') %>
+    
+      
+
+    <main>
+      <% if (prods.length > 0) { %>
+          <div class="grid">
+              <% for (let product of prods) { %>
+                  <article class="card product-item">
+                      <header class="card__header">
+                          <h1 class="product__title">
+                              <%= product.title %>
+                          </h1>
+                      </header>
+                      <div class="card__image">
+                          <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
+                      </div>
+                      <div class="card__content">
+                          <h2 class="product__price">$
+                              <%= product.price %>
+                          </h2>
+                          <p class="product__description">
+                              <%= product.description %>
+                          </p>
+                      </div>
+                      <div class="card__actions">
+                          <a href="/products/<%= product.id %>" class="btn">Details</a>
+                          <form action="/cart" method="post">
+                            <button class="btn" type="submit">Add to Cart</button>
+                            <input type="hidden" name="productId" value="<%= product.id %>">
+                        </form>
+                      </div>
+                  </article>
+                  <% } %>
+          </div>
+          <% } else { %>
+              <h1>No Products Found!</h1>
+              <% } %>
+  </main>
+
+
+
+  <script src="javascript/login-script.js"></script>
 
   </body>
 </html>
