--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,60 +1,49 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homepage</title>
-    <link rel="stylesheet" href="css/navbar-style.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,400,0,0" />
-    <link rel="icon" href="images/cart_logo.png"/>
-    <link rel="stylesheet" href="/css/product.css">
-    <link rel="stylesheet" href="/css/main.css">
-    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-  
-  </head>
-  <body>
+<%- include('./includes/header.ejs') %>
+  <%- include('./includes/navbarSheets.ejs') %>
+    <%- include('./includes/accessSheets.ejs') %>
+      <link rel="stylesheet" href="/css/main.css" />
+      <link rel="stylesheet" href="/css/product.css" />
+      </head>
 
-      <%- include('./includes/navbar.ejs') %>
-    
-      
+      <body>
+        <%- include('./includes/navbar.ejs') %>
+          <%- include('./includes/profileModal.ejs') %>
 
-    <main>
-      <% if (prods.length > 0) { %>
-          <div class="grid">
-              <% for (let product of prods) { %>
-                  <article class="card product-item">
+            <main>
+              <% if (prods.length> 0) { %>
+                <div class="grid">
+                  <% for (let product of prods) { %>
+                    <article class="card product-item">
                       <header class="card__header">
-                          <h1 class="product__title">
-                              <%= product.title %>
-                          </h1>
+                        <h1 class="product__title">
+                          <%= product.title %>
+                        </h1>
                       </header>
                       <div class="card__image">
-                          <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
+                        <img src="<%= product.imageUrl %>" alt="<%= product.title %>" />
                       </div>
                       <div class="card__content">
-                          <h2 class="product__price">$
-                              <%= product.price %>
-                          </h2>
-                          <p class="product__description">
-                              <%= product.description %>
-                          </p>
+                        <h2 class="product__price">$ <%= product.price %>
+                        </h2>
+                        <p class="product__description">
+                          <%= product.description %>
+                        </p>
                       </div>
                       <div class="card__actions">
-                          <a href="/products/<%= product.id %>" class="btn">Details</a>
-                          <form action="/cart" method="post">
-                            <button class="btn" type="submit">Add to Cart</button>
-                            <input type="hidden" name="productId" value="<%= product.id %>">
+                        <a href="/products/<%= product.id %>" class="btn">Details</a>
+                        <form action="/cart" method="post">
+                          <button class="btn" type="submit">Add to Cart</button>
+                          <input type="hidden" name="productId" value="<%= product.id %>" />
                         </form>
                       </div>
-                  </article>
+                    </article>
+                    <% } %>
+                </div>
+                <% } else { %>
+                  <h1>No Products Found!</h1>
                   <% } %>
-          </div>
-          <% } else { %>
-              <h1>No Products Found!</h1>
-              <% } %>
-  </main>
+            </main>
 
+      </body>
 
-  </body>
-</html>
+      </html>
