--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -1,6 +1,7 @@
 /* Add a black background color to the top navigation */
 @import url("https://fonts.cdnfonts.com/css/google-sans");
 
+/* Postion the navigation bar at the top of the page and make it sticky */
 .topnav {
   position: sticky;
   position: -webkit-sticky;
@@ -8,7 +9,7 @@
   display: flex;
   background-color: #333;
   height: fit-content;
-  z-index: 1;
+  z-index: 100;
   /* overflow: hidden; */
 }
 
@@ -21,8 +22,10 @@
   text-decoration: none;
   font-size: 12px;
   font-family: "Product Sans", sans-serif;
+  cursor: pointer;
 }
 
+/* Centering the Logo of the Nav */
 .logo {
   margin: auto;
   left: 50%;
@@ -32,19 +35,25 @@
   height: 40px;
 }
 
+/* Align the nav icons at the left */
 .nav-icons a {
   float: left;
 }
 
+/* Align the auth icon at the right */
 .auth-icons a {
   vertical-align: top;
   float: right;
 }
 
-/* Change the color of links on hover */
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
+/* Hide the (Exit / Logout) icon */
+#exit-button {
+  display: none;
+}
+
+/* Display Profile icon at the homepage */
+#profile-button {
+  display: flex;
 }
 
 /* Add an active class to highlight the current page */
@@ -56,4 +65,13 @@
 /* Hide the link that should open and close the topnav on small screens */
 .topnav .icon {
   display: none;
+}
+
+/* Prevent the Hovering effect on the mobile devices */
+@media (hover: hover) and (pointer: fine) {
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
 }
