Adding page and cart functionality

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -31,7 +31,7 @@
                       </div>
                       <div class="card__actions">
                         <a href="/products/<%= product.id %>" class="btn">Details</a>
-                        <form action="/cart" method="post">
+                        <form action="/cart" onsubmit="if(submitted) return false; submitted = true; return true" method="post">
                           <button class="btn" type="submit">Add to Cart</button>
                           <input type="hidden" name="productId" value="<%= product.id %>" />
                         </form>
