--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -10,7 +10,7 @@
     <a href="about" class="<%= path === '/about' ? 'active' : '' %>">About</a> -->
   </div>
 
-  <img src="images/cart_logo.png" class="logo" alt="logo" />
+  <img src="/images/cart_logo.png" class="logo" alt="logo" />
 
   <div class="auth-icons">
     <a id="profile-button" onclick="showAccessScreen()" title="Profile">
