--- a/views/includes/navbarSheets.ejs
+++ b/views/includes/navbarSheets.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/navbar.css" />
-<link rel="icon" href="images/cart_logo.png" />
+<link rel="stylesheet" href="/css/navbar.css" />
+<link rel="icon" href="/images/cart_logo.png" />
 <link rel="stylesheet"
   href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,400,0,0" />
