--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,6 +7,7 @@
 body {
   margin: 0px;
   padding: 0px;
+  overflow: overlay;
 }
 
 main {
@@ -76,4 +77,16 @@ main form {
 .btn:active {
   background-color: #00695c;
   color: white;
+}
+
+::-webkit-scrollbar {
+  max-width: 7px;
+  height: 20px;
+  padding: 0px 0px 0px 0px;
+  background: rgba(0, 0, 0, 0.2);
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(0, 0, 0, 0.4);
+  border-radius: 8px;
 }
