--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -3,14 +3,14 @@
     <a href="/" class="<%= path === '/' ? 'active' : '' %>" title="Home">
       <span class="material-symbols-outlined"> home </span>
     </a>
-    <!-- <a href="news" class="<%= path === '/news' ? 'active' : '' %>">News</a>
-    <a href="contact" class="<%= path === '/contact' ? 'active' : '' %>"
-      >Contact</a
-    >
-    <a href="about" class="<%= path === '/about' ? 'active' : '' %>">About</a> -->
   </div>
 
   <img src="/images/cart_logo.png" class="logo" alt="logo" />
+
+
+  <a id="cart-button" title="Cart">
+    <span class="material-symbols-outlined"> shopping_bag </span>
+  </a>
 
   <div class="auth-icons">
     <a id="profile-button" onclick="showAccessScreen()" title="Profile">
